@@ -3,6 +3,7 @@ Revision history for DBIx::Class
 0.03002
         - Minor bugfix to new (Row.pm)
         - Schema doesn't die if it can't load a class (Schema.pm)
+        - New UUID columns plugin (UUIDColumns.pm)
 
 0.03001 2005-09-23 14:00:00
         - Fixes to relationship helpers
